@@ -719,7 +719,7 @@ operator|.
 name|MINIMUM_RESOLUTION
 return|;
 block|}
-comment|/** Compute surface distance between two points.    * @param p1 is the first point.    * @param p2 is the second point.    * @return the adjusted angle, when multiplied by the mean earth radius, yields a surface distance.  This will differ    * from GeoPoint.arcDistance() only when the planet model is not a sphere. @see {@link GeoPoint#arcDistance(GeoPoint)}    */
+comment|/** Compute surface distance between two points.    * @param pt1 is the first point.    * @param pt2 is the second point.    * @return the adjusted angle, when multiplied by the mean earth radius, yields a surface distance.  This will differ    * from GeoPoint.arcDistance() only when the planet model is not a sphere. @see {@link GeoPoint#arcDistance(GeoPoint)}    */
 DECL|method|surfaceDistance
 specifier|public
 name|double
@@ -727,82 +727,49 @@ name|surfaceDistance
 parameter_list|(
 specifier|final
 name|GeoPoint
-name|p1
+name|pt1
 parameter_list|,
 specifier|final
 name|GeoPoint
-name|p2
+name|pt2
 parameter_list|)
 block|{
 specifier|final
 name|double
-name|latA
-init|=
-name|p1
-operator|.
-name|getLatitude
-argument_list|()
-decl_stmt|;
-specifier|final
-name|double
-name|lonA
-init|=
-name|p1
-operator|.
-name|getLongitude
-argument_list|()
-decl_stmt|;
-specifier|final
-name|double
-name|latB
-init|=
-name|p2
-operator|.
-name|getLatitude
-argument_list|()
-decl_stmt|;
-specifier|final
-name|double
-name|lonB
-init|=
-name|p2
-operator|.
-name|getLongitude
-argument_list|()
-decl_stmt|;
-specifier|final
-name|double
 name|L
 init|=
-name|lonB
+name|pt2
+operator|.
+name|getLongitude
+argument_list|()
 operator|-
-name|lonA
+name|pt1
+operator|.
+name|getLongitude
+argument_list|()
 decl_stmt|;
 specifier|final
 name|double
-name|oF
+name|U1
 init|=
+name|Math
+operator|.
+name|atan
+argument_list|(
+operator|(
 literal|1.0
 operator|-
-name|this
-operator|.
 name|flattening
-decl_stmt|;
-specifier|final
-name|double
-name|U1
-init|=
-name|Math
-operator|.
-name|atan
-argument_list|(
-name|oF
+operator|)
 operator|*
 name|Math
 operator|.
 name|tan
 argument_list|(
-name|latA
+name|pt1
+operator|.
+name|getLatitude
+argument_list|()
 argument_list|)
 argument_list|)
 decl_stmt|;
@@ -814,19 +781,26 @@ name|Math
 operator|.
 name|atan
 argument_list|(
-name|oF
+operator|(
+literal|1.0
+operator|-
+name|flattening
+operator|)
 operator|*
 name|Math
 operator|.
 name|tan
 argument_list|(
-name|latB
+name|pt2
+operator|.
+name|getLatitude
+argument_list|()
 argument_list|)
 argument_list|)
 decl_stmt|;
 specifier|final
 name|double
-name|sU1
+name|sinU1
 init|=
 name|Math
 operator|.
@@ -837,7 +811,7 @@ argument_list|)
 decl_stmt|;
 specifier|final
 name|double
-name|cU1
+name|cosU1
 init|=
 name|Math
 operator|.
@@ -848,7 +822,7 @@ argument_list|)
 decl_stmt|;
 specifier|final
 name|double
-name|sU2
+name|sinU2
 init|=
 name|Math
 operator|.
@@ -859,7 +833,7 @@ argument_list|)
 decl_stmt|;
 specifier|final
 name|double
-name|cU2
+name|cosU2
 init|=
 name|Math
 operator|.
@@ -868,52 +842,103 @@ argument_list|(
 name|U2
 argument_list|)
 decl_stmt|;
+specifier|final
 name|double
-name|sigma
-decl_stmt|,
+name|dCosU1CosU2
+init|=
+name|cosU1
+operator|*
+name|cosU2
+decl_stmt|;
+specifier|final
+name|double
+name|dCosU1SinU2
+init|=
+name|cosU1
+operator|*
+name|sinU2
+decl_stmt|;
+specifier|final
+name|double
+name|dSinU1SinU2
+init|=
+name|sinU1
+operator|*
+name|sinU2
+decl_stmt|;
+specifier|final
+name|double
+name|dSinU1CosU2
+init|=
+name|sinU1
+operator|*
+name|cosU2
+decl_stmt|;
+name|double
+name|lambda
+init|=
+name|L
+decl_stmt|;
+name|double
+name|lambdaP
+init|=
+name|Math
+operator|.
+name|PI
+operator|*
+literal|2.0
+decl_stmt|;
+name|int
+name|iterLimit
+init|=
+literal|0
+decl_stmt|;
+name|double
+name|cosSqAlpha
+decl_stmt|;
+name|double
 name|sinSigma
-decl_stmt|,
-name|cosSigma
 decl_stmt|;
 name|double
-name|cos2Alpha
-decl_stmt|,
 name|cos2SigmaM
 decl_stmt|;
 name|double
-name|lambda
-init|=
-name|L
+name|cosSigma
 decl_stmt|;
 name|double
-name|iters
-init|=
-literal|100
+name|sigma
+decl_stmt|;
+name|double
+name|sinAlpha
+decl_stmt|;
+name|double
+name|C
+decl_stmt|;
+name|double
+name|sinLambda
+decl_stmt|,
+name|cosLambda
 decl_stmt|;
 do|do
 block|{
-specifier|final
-name|double
 name|sinLambda
-init|=
+operator|=
 name|Math
 operator|.
 name|sin
 argument_list|(
 name|lambda
 argument_list|)
-decl_stmt|;
-specifier|final
-name|double
+expr_stmt|;
 name|cosLambda
-init|=
+operator|=
 name|Math
 operator|.
 name|cos
 argument_list|(
 name|lambda
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 name|sinSigma
 operator|=
 name|Math
@@ -921,37 +946,29 @@ operator|.
 name|sqrt
 argument_list|(
 operator|(
-name|cU2
+name|cosU2
 operator|*
 name|sinLambda
 operator|)
 operator|*
 operator|(
-name|cU2
+name|cosU2
 operator|*
 name|sinLambda
 operator|)
 operator|+
 operator|(
-name|cU1
-operator|*
-name|sU2
+name|dCosU1SinU2
 operator|-
-name|sU1
-operator|*
-name|cU2
+name|dSinU1CosU2
 operator|*
 name|cosLambda
 operator|)
 operator|*
 operator|(
-name|cU1
-operator|*
-name|sU2
+name|dCosU1SinU2
 operator|-
-name|sU1
-operator|*
-name|cU2
+name|dSinU1CosU2
 operator|*
 name|cosLambda
 operator|)
@@ -959,29 +976,20 @@ argument_list|)
 expr_stmt|;
 if|if
 condition|(
-name|Math
-operator|.
-name|abs
-argument_list|(
 name|sinSigma
-argument_list|)
-operator|<
-name|Vector
-operator|.
-name|MINIMUM_RESOLUTION
+operator|==
+literal|0.0
 condition|)
+block|{
 return|return
 literal|0.0
 return|;
+block|}
 name|cosSigma
 operator|=
-name|sU1
-operator|*
-name|sU2
+name|dSinU1SinU2
 operator|+
-name|cU1
-operator|*
-name|cU2
+name|dCosU1CosU2
 operator|*
 name|cosLambda
 expr_stmt|;
@@ -996,19 +1004,15 @@ argument_list|,
 name|cosSigma
 argument_list|)
 expr_stmt|;
-specifier|final
-name|double
 name|sinAlpha
-init|=
-name|cU1
-operator|*
-name|cU2
+operator|=
+name|dCosU1CosU2
 operator|*
 name|sinLambda
 operator|/
 name|sinSigma
-decl_stmt|;
-name|cos2Alpha
+expr_stmt|;
+name|cosSqAlpha
 operator|=
 literal|1.0
 operator|-
@@ -1022,29 +1026,35 @@ name|cosSigma
 operator|-
 literal|2.0
 operator|*
-name|sU1
-operator|*
-name|sU2
+name|dSinU1SinU2
 operator|/
-name|cos2Alpha
+name|cosSqAlpha
 expr_stmt|;
-specifier|final
-name|double
-name|c
-init|=
-name|this
+if|if
+condition|(
+name|Double
 operator|.
+name|isNaN
+argument_list|(
+name|cos2SigmaM
+argument_list|)
+condition|)
+name|cos2SigmaM
+operator|=
+literal|0.0
+expr_stmt|;
+comment|// equatorial line: cosSqAlpha=0
+name|C
+operator|=
 name|flattening
+operator|/
+literal|16.0
 operator|*
-literal|0.625
-operator|*
-name|cos2Alpha
+name|cosSqAlpha
 operator|*
 operator|(
 literal|4.0
 operator|+
-name|this
-operator|.
 name|flattening
 operator|*
 operator|(
@@ -1052,16 +1062,14 @@ literal|4.0
 operator|-
 literal|3.0
 operator|*
-name|cos2Alpha
+name|cosSqAlpha
 operator|)
 operator|)
-decl_stmt|;
-specifier|final
-name|double
+expr_stmt|;
 name|lambdaP
-init|=
+operator|=
 name|lambda
-decl_stmt|;
+expr_stmt|;
 name|lambda
 operator|=
 name|L
@@ -1069,11 +1077,9 @@ operator|+
 operator|(
 literal|1.0
 operator|-
-name|c
+name|C
 operator|)
 operator|*
-name|this
-operator|.
 name|flattening
 operator|*
 name|sinAlpha
@@ -1081,14 +1087,14 @@ operator|*
 operator|(
 name|sigma
 operator|+
-name|c
+name|C
 operator|*
 name|sinSigma
 operator|*
 operator|(
 name|cos2SigmaM
 operator|+
-name|c
+name|C
 operator|*
 name|cosSigma
 operator|*
@@ -1105,7 +1111,8 @@ operator|)
 operator|)
 operator|)
 expr_stmt|;
-if|if
+block|}
+do|while
 condition|(
 name|Math
 operator|.
@@ -1115,35 +1122,22 @@ name|lambda
 operator|-
 name|lambdaP
 argument_list|)
-operator|<
+operator|>
 name|Vector
 operator|.
 name|MINIMUM_RESOLUTION
-condition|)
-break|break;
-block|}
-do|while
-condition|(
-operator|--
-name|iters
-operator|>
-literal|0
+operator|&&
+operator|++
+name|iterLimit
+operator|<
+literal|40
 condition|)
 do|;
-if|if
-condition|(
-name|iters
-operator|==
-literal|0
-condition|)
-return|return
-literal|0.0
-return|;
 specifier|final
 name|double
 name|uSq
 init|=
-name|cos2Alpha
+name|cosSqAlpha
 operator|*
 name|this
 operator|.
@@ -1156,8 +1150,8 @@ init|=
 literal|1.0
 operator|+
 name|uSq
-operator|*
-literal|0.00006103515625
+operator|/
+literal|16384.0
 operator|*
 operator|(
 literal|4096.0
@@ -1185,8 +1179,8 @@ name|double
 name|B
 init|=
 name|uSq
-operator|*
-literal|0.0009765625
+operator|/
+literal|1024.0
 operator|*
 operator|(
 literal|256.0
@@ -1221,8 +1215,8 @@ operator|(
 name|cos2SigmaM
 operator|+
 name|B
-operator|*
-literal|0.25
+operator|/
+literal|4.0
 operator|*
 operator|(
 name|cosSigma
@@ -1239,8 +1233,8 @@ name|cos2SigmaM
 operator|)
 operator|-
 name|B
-operator|*
-literal|0.16666666666666666666667
+operator|/
+literal|6.0
 operator|*
 name|cos2SigmaM
 operator|*
@@ -1269,8 +1263,6 @@ operator|)
 operator|)
 decl_stmt|;
 return|return
-name|this
-operator|.
 name|c
 operator|*
 name|A
