@@ -481,6 +481,167 @@ argument_list|,
 literal|1e-6
 argument_list|)
 expr_stmt|;
+comment|// Now try some WGS84 points (taken randomly and compared against a known-good implementation)
+name|assertEquals
+argument_list|(
+literal|1.1444648695765323
+argument_list|,
+name|PlanetModel
+operator|.
+name|WGS84
+operator|.
+name|surfaceDistance
+argument_list|(
+operator|new
+name|GeoPoint
+argument_list|(
+name|PlanetModel
+operator|.
+name|WGS84
+argument_list|,
+literal|0.038203808753702884
+argument_list|,
+operator|-
+literal|0.6701260455506466
+argument_list|)
+argument_list|,
+operator|new
+name|GeoPoint
+argument_list|(
+name|PlanetModel
+operator|.
+name|WGS84
+argument_list|,
+operator|-
+literal|0.8453720422675458
+argument_list|,
+literal|0.1737353153814496
+argument_list|)
+argument_list|)
+argument_list|,
+literal|1e-6
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1.4345148695890722
+argument_list|,
+name|PlanetModel
+operator|.
+name|WGS84
+operator|.
+name|surfaceDistance
+argument_list|(
+operator|new
+name|GeoPoint
+argument_list|(
+name|PlanetModel
+operator|.
+name|WGS84
+argument_list|,
+literal|0.5220926323378574
+argument_list|,
+literal|0.6758041581907408
+argument_list|)
+argument_list|,
+operator|new
+name|GeoPoint
+argument_list|(
+name|PlanetModel
+operator|.
+name|WGS84
+argument_list|,
+operator|-
+literal|0.8453720422675458
+argument_list|,
+literal|0.1737353153814496
+argument_list|)
+argument_list|)
+argument_list|,
+literal|1e-6
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2.32418144616446
+argument_list|,
+name|PlanetModel
+operator|.
+name|WGS84
+operator|.
+name|surfaceDistance
+argument_list|(
+operator|new
+name|GeoPoint
+argument_list|(
+name|PlanetModel
+operator|.
+name|WGS84
+argument_list|,
+literal|0.09541335760967473
+argument_list|,
+literal|1.2091829760623236
+argument_list|)
+argument_list|,
+operator|new
+name|GeoPoint
+argument_list|(
+name|PlanetModel
+operator|.
+name|WGS84
+argument_list|,
+operator|-
+literal|0.8501591797459979
+argument_list|,
+operator|-
+literal|2.3044806381627594
+argument_list|)
+argument_list|)
+argument_list|,
+literal|1e-6
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2.018421047005435
+argument_list|,
+name|PlanetModel
+operator|.
+name|WGS84
+operator|.
+name|surfaceDistance
+argument_list|(
+operator|new
+name|GeoPoint
+argument_list|(
+name|PlanetModel
+operator|.
+name|WGS84
+argument_list|,
+literal|0.3402853531962009
+argument_list|,
+operator|-
+literal|0.43544195327249957
+argument_list|)
+argument_list|,
+operator|new
+name|GeoPoint
+argument_list|(
+name|PlanetModel
+operator|.
+name|WGS84
+argument_list|,
+operator|-
+literal|0.8501591797459979
+argument_list|,
+operator|-
+literal|2.3044806381627594
+argument_list|)
+argument_list|)
+argument_list|,
+literal|1e-6
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 annotation|@
